[Driver] Add missing `whole-archive` for sanitizer runtimes on Linux

Issue: https://bugs.swift.org/browse/SR-10152

During the linking step on Linux we need to specify `--whole-archive`.